phase 1.1.0
features
- addition for sql dialect (builtins, DEFAULT, TRUNCATE, ALTER FK/PK)
- jepsen qg